--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 2.0.1
+=============
+House keeping: added API documentation, extended README.
+Changed license to MIT License.
+
 Version 2.0.0
 =============
 This version supports the latest Swift version (2.2). The API of Interface is simplified:
