--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 3.0.0
+=============
+Swift 3 support.
+
 Version 2.0.1
 =============
 House keeping: added API documentation, extended README.
