--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 4.0.2
+=============
+- Added Swift Package Manager support.
+- Changed documentation URL in README.
+
 Version 4.0.1
 =============
 Better check in source code for whether our own `ifaddrs` module map needs
